--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
+    "jquery": "^3.6.0",
+    "modernizr": "^3.13.0",
+    "next": "14.2.4",
+    "parallax-js": "^3.1.0",
+    "paroller.js": "^1.4.7",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "slick": "^1.12.2",
+    "slick-carousel": "^1.8.1",
+    "wowjs": "^1.1.3"
   }
 }
