--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "element-in-view": "^0.1.0",
     "jquery": "^3.6.0",
+    "jquery-waypoints": "^2.0.5",
+    "jquery.counterup": "^2.1.0",
+    "magnific-popup": "^1.2.0",
+    "mmenu-js": "^9.3.0",
     "modernizr": "^3.13.0",
     "next": "14.2.4",
     "parallax-js": "^3.1.0",
     "paroller.js": "^1.4.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-scroll-parallax": "^3.4.5",
     "slick": "^1.12.2",
     "slick-carousel": "^1.8.1",
     "wowjs": "^1.1.3"
