--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "paroller.js": "^1.4.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-modal-video": "^2.0.2",
     "react-scroll-parallax": "^3.4.5",
     "slick": "^1.12.2",
     "slick-carousel": "^1.8.1",
